# standissect

./: .gitignore  METHODS.md  README.md  __init__.py  __main__.py  annotate.py  cli.py  cluster.py  diagnosis.py  export_coords.py  parallel.py  pipeline.py  pyproject.toml  report.py  review_store.py  webreview.py
docs/superpowers/plans/: 2026-06-25-core-naming-narrative.md  2026-06-25-deg-llm-concurrency.md  2026-06-26-recommend-discard.md  2026-06-29-interactive-review-server.md
docs/superpowers/specs/: 2026-06-25-core-naming-narrative-design.md  2026-06-25-deg-llm-concurrency-design.md  2026-06-26-recommend-discard-design.md  2026-06-29-interactive-review-server-design.md
standissect/: __init__.py  cluster.py  pipeline.py
tests/: conftest.py  test_annotate.py  test_cli.py  test_cluster.py  test_diagnosis_llm.py  test_discard_outputs.py  test_disposition.py  test_export_coords.py  test_parallel.py  test_pipeline.py  test_pipeline_parallel.py  test_report.py  test_review_store.py  test_webreview.py  test_wilcoxon.py
webreview_static/: app.js  index.html  style.css
