[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "standissect"
version = "0.1.0"
description = "Cluster cleanup-diagnosis for single-cell data: UMAP-Leiden dissection, per-cluster DEG, canonical-core markers, minor-anatomy heatmaps, and a self-contained HTML report."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "scanpy",
    "anndata",
    "igraph",
    "leidenalg",
    "matplotlib",
    "seaborn",
    "statsmodels",
    "joblib",
]

[tool.setuptools]
packages = ["standissect"]
